--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "binary-extensions": "^2.3.0",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.3",
+    "chalk": "^5.4.1",
     "chokidar": "^3.6.0",
     "concat-map": "^0.0.1",
     "debug": "^4.4.1",
